k8s/ingress/01-path-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pathtype-demo
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-api
                port:
                  number: 8080

          - path: /admin
            pathType: Exact
            backend:
              service:
                name: admin-svc
                port:
                  number: 9090
